# wflow

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Readme.md  _readme_8md.html  annotated.html  classes.html  classwflow_1_1workflow-members.html  classwflow_1_1workflow.html  customdoxygen.css  deprecated.html  dir_8eab678918d29f47ce726eb97f1ecd22.html  example01_8cpp-example.html  example02_8cpp-example.html  example03_8cpp-example.html  example04_8cpp-example.html  example05_8cpp-example.html  example06_8cpp-example.html  example07_8cpp-example.html  example08_8cpp-example.html  example09_8cpp-example.html  example10_8cpp-example.html  example11_8cpp-example.html  example12_8cpp-example.html  example13_8cpp-example.html  example14_8cpp-example.html  example15_8cpp-example.html  examples.html  expires__at_8hpp.html  expires__at_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  (+30 more)
.ci/: automr.sh  cppcheck-exec.sh  cppcheck.sh  suppressions.txt
.cppcheck/: suppressions.txt
.github/: build_history.txt
.github/workflows/: mambaru.yml  setup.sh
cmake/: AUX.cmake  ConfigureLibrary.cmake  install.cmake  mambaopt.cmake  mambaru.cmake
cov-report/: index-sort-f.html  index-sort-l.html  index.html
cov-report/tests/: asio_queue_suite.cpp.func-sort-c.html  asio_queue_suite.cpp.func.html  asio_queue_suite.cpp.gcov.html  delayed_common_suite.hpp.func-sort-c.html  delayed_common_suite.hpp.func.html  delayed_common_suite.hpp.gcov.html  delayed_queue_suite.cpp.func-sort-c.html  delayed_queue_suite.cpp.func.html  delayed_queue_suite.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  thread_pool_suite.cpp.func-sort-c.html  thread_pool_suite.cpp.func.html  thread_pool_suite.cpp.gcov.html  timer_manager_suite.cpp.func-sort-c.html  timer_manager_suite.cpp.func.html  timer_manager_suite.cpp.gcov.html  workflow_suite.cpp.func-sort-c.html  workflow_suite.cpp.func.html  workflow_suite.cpp.gcov.html  workflow_test.cpp.func-sort-c.html  workflow_test.cpp.func.html  workflow_test.cpp.gcov.html
cov-report/wflow/: index-sort-f.html  index-sort-l.html  index.html  workflow.cpp.func-sort-c.html  workflow.cpp.func.html  workflow.cpp.gcov.html  workflow.hpp.func-sort-c.html  workflow.hpp.func.html  workflow.hpp.gcov.html  workflow_options.hpp.func-sort-c.html  workflow_options.hpp.func.html  workflow_options.hpp.gcov.html
cov-report/wflow/json/: index-sort-f.html  index-sort-l.html  index.html  (+6 more)
doc/html/: annotated.html  classes.html  classwflow_1_1workflow-members.html  classwflow_1_1workflow.html  dir_8eab678918d29f47ce726eb97f1ecd22.html  doxygen.css  expires__at_8hpp_source.html  files.html  functions.html  functions_func.html  index.html  load_8hpp_source.html  logger_8hpp_source.html  structwflow_1_1workflow__options-members.html  structwflow_1_1workflow__options.html  tabs.css  workflow_8hpp_source.html  workflow__options_8hpp_source.html
doc/rtf/: dir_8eab678918d29f47ce726eb97f1ecd22.rtf  refman.rtf
examples/: CMakeLists.txt  example0.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example1.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15-1.json  example15.cpp  example16.cpp  example2.cpp  example3.cpp  example4.cpp  exampleR.cpp  exampleR0.cpp  exampleR1.cpp  exampleR2.cpp  exampleR3.cpp  exampleR5.cpp
iow/: logger.hpp  memory.hpp
iow/io/: io_base.hpp  types.hpp
iow/logger/: global_log.cpp  global_log.hpp  logstream.hpp
iow/mutex/: empty_mutex.hpp  rwlock.hpp
iow/owner/: callback_handler.hpp  owner.hpp  owner_handler.hpp  owner_handler2.hpp
iow/workflow/: asio_queue.cpp  asio_queue.hpp  bique.cpp  bique.hpp  common_timer.hpp  delayed_queue.cpp  delayed_queue.hpp  requester.hpp  task_manager.cpp  task_manager.hpp  thread_pool.hpp  thread_pool_base.cpp  thread_pool_base.hpp  timer.hpp  timer_manager.cpp  timer_manager.hpp  timer_manager_base.cpp  timer_manager_base.hpp  workflow.cpp  workflow.hpp  workflow_options.hpp  workflow_options_json.hpp
tests/: CMakeLists.txt  asio_queue_suite.cpp  delayed_common_suite.hpp  delayed_queue_suite.cpp  thread_pool_suite.cpp  timer_manager_suite.cpp  workflow_suite.cpp  workflow_test.cpp
tests/aux/: CMakeLists.txt  read_buffer_bench.cpp  read_buffer_bench_big.cpp  read_buffer_test.cpp  write_buffer_bench.cpp  write_buffer_test.cpp
tests/io/: CMakeLists.txt  dgram_holder_suite.cpp  factory_suite.cpp  flow_suite.cpp  io_base_suite.cpp  io_test.cpp  pipe_suite.cpp  stream_holder_suite.cpp  stream_suite.cpp  tcp_acceptor.cpp  tcp_client.cpp  udp_test.cpp
tests/owner/: CMakeLists.txt  owner_test.cpp
tests/workflow/: CMakeLists.txt  delayed_common_suite.hpp  delayed_queue_suite.cpp  timer_manager_suite.cpp  workflow_suite.cpp
wflow/: asio.hpp  asio_queue.cpp  asio_queue.hpp  bique.cpp  bique.hpp  boost.hpp  common_timer.hpp  delayed_queue.cpp  delayed_queue.hpp  expires_at.hpp  load.cpp  load.hpp  logger.hpp  memory.hpp  mutex.hpp  owner.hpp  requester.hpp  system.hpp  task_manager.cpp  task_manager.hpp  thread_pool.hpp  thread_pool_base.cpp  thread_pool_base.hpp  timer.cpp  timer.hpp  timer_manager.cpp  timer_manager.hpp  timer_manager_base.cpp  timer_manager_base.hpp  version.hpp  wflow.hpp  workflow.cpp  workflow.hpp  workflow_options.hpp  workflow_options_json.hpp
wflow/json/: load.cpp  workflow_options_json.hpp
wflow/mutex/: empty_mutex.hpp  rwlock.hpp  spinlock.hpp
wflow/owner/: callback_handler.hpp  owner.hpp  owner_handler.hpp
wflow/queue/: asio_queue.cpp  asio_queue.hpp  bique.cpp  bique.hpp  delayed_queue.cpp  delayed_queue.hpp
wflow/system/: asio.hpp  boost.hpp  memory.hpp  system.hpp
wflow/task/: task_manager.cpp  task_manager.hpp  thread_pool.hpp  thread_pool_base.cpp  thread_pool_base.hpp
wflow/timer/: common_timer.hpp  requester.hpp  timer.cpp  timer.hpp  timer_manager.cpp  timer_manager.hpp  timer_manager_base.cpp  timer_manager_base.hpp
(+227 files in other folders)
