add_executable( example0 example0.cpp )
target_link_libraries(example0 wflow )

add_executable( example01 example01.cpp )
target_link_libraries(example01 wflow )

add_executable( example02 example02.cpp )
target_link_libraries(example02 wflow )

add_executable( example1 example1.cpp )
target_link_libraries(example1 wflow )

add_executable( example2 example2.cpp )
target_link_libraries(example2 wflow )

add_executable( example3 example3.cpp )
target_link_libraries(example3 wflow )

add_executable( example4 example4.cpp )
target_link_libraries(example4 wflow )

add_executable( exampleR0 exampleR0.cpp )
target_link_libraries(exampleR0 wflow )

add_executable( exampleR1 exampleR1.cpp )
target_link_libraries(exampleR1 wflow )

add_executable( exampleR2 exampleR2.cpp )
target_link_libraries(exampleR2 wflow )

add_executable( exampleR3 exampleR3.cpp )
target_link_libraries(exampleR3 wflow )

add_executable( exampleR exampleR.cpp )
target_link_libraries(exampleR wflow )
